GitHubMiner models